--- a/config.toml
+++ b/config.toml
@@ -79,7 +79,8 @@ scripts = [
  "piqueserver.scripts.passreload",
  "piqueserver.scripts.blockinfo",
  "piqueserver.scripts.squad",
- "piqueserver.scripts.afk"
+ "piqueserver.scripts.afk",
+ "babel_script"
 ]
 
 # number of /login attempts allowed before players are auto-kicked (default: 1)
@@ -108,7 +109,7 @@ random_rotation = false
 # game modes specified by python module or python script in the config game_modes
 # directory (without the '.py' extension).
 # Examples: "piqueserver.game_modes.push", "mygame" (where you have config/game_modes/mygame.py)
-game_mode = "tc"
+game_mode = "babel"
 
 # default time limit to set per map. When the time limit runs out, the map rotation is advanced
 default_time_limit = "30minutes"
