--- a/config.toml
+++ b/config.toml
@@ -108,8 +108,8 @@ rotation = [
   "penthouse",
   "realisticbridge",
   "rocketisland",
-  "spacestationarena",
-  "spacestation",
+  # "spacestationarena",
+  # "spacestation",
   "submarinearena",
   "submarine",
   "Trenches",
