--- a/config.toml
+++ b/config.toml
@@ -321,10 +321,10 @@ chatprefix = "."
 
 
 # piqueserver.scripts.squad
-[squad]
-respawn_time = "8sec"
-size = 4
-auto_squad = false
+# [squad]
+# respawn_time = "8sec"
+# size = 4
+# auto_squad = false
 
 
 # piqueserver.scripts.savemap
