--- a/config.toml
+++ b/config.toml
@@ -82,7 +82,7 @@ scripts = [
  "piqueserver.scripts.blockinfo",
  "piqueserver.scripts.squad",
  "piqueserver.scripts.afk",
- "piqueserver.scripts.babel_script",
+ "babel_script",
  "piqueserver.scripts.votemap"
 ]
 
@@ -128,7 +128,7 @@ random_rotation = true
 # game modes specified by python module or python script in the config game_modes
 # directory (without the '.py' extension).
 # Examples: "piqueserver.game_modes.push", "mygame" (where you have config/game_modes/mygame.py)
-game_mode = "piqueserver.game_modes.babel"
+game_mode = "babel"
 
 # default time limit to set per map. When the time limit runs out, the map rotation is advanced
 default_time_limit = "30minutes"
