--- a/config.toml
+++ b/config.toml
@@ -108,13 +108,13 @@ rotation = [
   "museum",
   "nuketown",
   "penthousearena",
-  "penthouse",
+  # "penthouse",
   "realisticbridge",
   "rocketisland",
   # "spacestationarena",
   # "spacestation",
   "submarinearena",
-  "submarine",
+  # "submarine",
   "Trenches",
   "tunnel-top",
 ]
