--- a/config.toml
+++ b/config.toml
@@ -97,7 +97,7 @@ login_retries = 3
 rotation = [
   "IF",
   "tunnel-top",
-  "nuketown",
+  # "nuketown",
   "capitol",
   "f_show",
   "IF",
@@ -106,14 +106,14 @@ rotation = [
   "Metropolis",
   "museumarena",
   "museum",
-  "nuketown",
+  # "nuketown",
   "penthousearena",
   # "penthouse",
   "realisticbridge",
   "rocketisland",
   # "spacestationarena",
   # "spacestation",
-  "submarinearena",
+  # "submarinearena",
   # "submarine",
   "Trenches",
   "tunnel-top",
