--- a/config.toml
+++ b/config.toml
@@ -95,26 +95,18 @@ login_retries = 3
 # eg. if you have hallway.txt and hallway.vxl, you can add "hallway" to the rotation
 # Note: you can still load a map in-game that isn't on this rotation list with commands
 rotation = [
-  "IF",
-  "tunnel-top",
-  # "nuketown",
   "capitol",
-  "f_show",
   "IF",
+  "f_show",
   "Isthmos",
   "lonetower",
   "Metropolis",
-  "museumarena",
   "museum",
-  # "nuketown",
+  "museumarena",
+  "penthouse",
   "penthousearena",
-  # "penthouse",
   "realisticbridge",
   "rocketisland",
-  # "spacestationarena",
-  # "spacestation",
-  # "submarinearena",
-  # "submarine",
   "Trenches",
   "tunnel-top",
 ]
