--- a/config.toml
+++ b/config.toml
@@ -95,14 +95,27 @@ login_retries = 3
 # eg. if you have hallway.txt and hallway.vxl, you can add "hallway" to the rotation
 # Note: you can still load a map in-game that isn't on this rotation list with commands
 rotation = [
+	"1Target_inf",
+	"2isles",
+  "19_Guadalcanal",
   "capitol",
-  "IF",
+  "Crossfire_3",
+	"CRUMB",
+	"De_Dust2",
+	"Deadlock",
+  "Death_Valley",
   "f_show",
+  "Gobi",
+  "Grassy-topo-land",
+  "Ha_Long_Babel",
+  "Hijacked",
+  "IF",
   "Isthmos",
   "lonetower",
   "Metropolis",
   "museum",
   "museumarena",
+  "nuketown",
   "penthouse",
   "penthousearena",
   "realisticbridge",
