--- a/config.toml
+++ b/config.toml
@@ -117,7 +117,7 @@ rotation = [
   "Metropolis",
   "museum",
   "museumarena",
-  "nuketown",
+  # "nuketown",
   "penthouse",
   "penthousearena",
   "realisticbridge",
